@@ -2,3 +2,4 @@
 ( diff -u /dev/null .cvsignore;  diff -u /dev/null AUTHORS;  diff -u /dev/null COPYING;  diff -u /dev/null ChangeLog;  diff -u /dev/null INSTALL;  diff -u /dev/null Makefile.am;  diff -u /dev/null NEWS;  diff -u /dev/null PATCHSETS;  diff -u /dev/null README;  diff -u /dev/null aclocal.m4;  diff -u /dev/null autogen.sh;  diff -u /dev/null commitHelper;  diff -u /dev/null config.h.in;  diff -u /dev/null configure.ac;  diff -u /dev/null config/.cvsignore;  diff -u /dev/null config/Makefile.am;  diff -u /dev/null config/config.rpath;  diff -u /dev/null config/mkinstalldirs;  diff -u /dev/null po/.cvsignore;  diff -u /dev/null po/ChangeLog;  diff -u /dev/null po/Makefile.in.in;  diff -u /dev/null po/Makevars;  diff -u /dev/null po/POTFILES.in;  diff -u /dev/null po/fr.po;  diff -u /dev/null po/remove-potcdate.sin;  diff -u /dev/null po/spam_report.pot;  diff -u /dev/null src/.cvsignore;  diff -u /dev/null src/Makefile.am;  diff -u /dev/null src/gettext.h;  diff -u /dev/null src/spam_report.c;  diff -u /dev/null src/spam_report_prefs.c;  diff -u /dev/null src/spam_report_prefs.h;  ) > 0.1.1cvs2.patchset
 ( cvs diff -u -r 1.1.2.1 -r 1.1.2.2 src/spam_report.c;  ) > 0.1.1cvs3.patchset
 ( cvs diff -u -r 1.1.2.2 -r 1.1.2.3 configure.ac;  ) > 0.1.1cvs4.patchset
+( cvs diff -u -r 1.1.2.1 -r 1.1.2.2 src/spam_report_prefs.c;  cvs diff -u -r 1.1.2.2 -r 1.1.2.3 src/spam_report.c;  ) > 0.1.1cvs5.patchset
