@@ -1,3 +1,10 @@
+2007-07-05 [wwp]	0.1.1cvs5
+
+	* src/spam_report_prefs.c
+	* src/spam_report.c
+		Use the internal base64_encode'r instead of g_base64_encode,
+		which is glib in 2.12.x only. Fixed spacing in prefs layout.
+
 2007-07-05 [paul]	0.1.1cvs4
 
 	* configure.ac
